--- a/Pages/Registros/RegistroPersonasComponent.razor
+++ b/Pages/Registros/RegistroPersonasComponent.razor
@@ -9,6 +9,7 @@
     <div class="card">
         <div class="card-header">
             <h3>Registro personas</h3>
+            <a style="float:right; margin-top: -48px; height: 40px;" class="btn btn-primary" href="ConsultaPersonas">Consultar personas</a>
         </div>
 
         <div class="card-body">
@@ -21,7 +22,9 @@
                             <div class="input-group">
                                 <InputNumber @bind-Value="personas.PersonaId" class="form-control col-4" />
                                 <div class="input-group-append">
-                                    <button type="button" class="btn btn-primary input-group-text" @onclick="Buscar">Buscar</button>
+                                    <button type="button" class="btn btn-primary input-group-text" @onclick="Buscar">
+                                       <span class="oi oi-zoom-in"></span> Buscar
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -30,46 +33,72 @@
 
                 @*Nombre*@
                 <div class="form-group">
-                    <label>Nombre</label>
+                    <label>Nombres</label>
                     <InputText @bind-Value="personas.Nombre" class="form-control" />
                     <ValidationMessage For="@(() => personas.Nombre)" />
+                    <small id="NameInLineHelper" class="text-muted">
+                        Ingresar el(os) nombres de la persona
+                    </small>
                 </div>
 
-                @*Telefono*@
+                    @*Telefono*@
                 <div class="form-group">
                     <label>Telefono</label>
                     <InputText @bind-Value="personas.Telefono" class="form-control" />
                     <ValidationMessage For="(() => personas.Telefono)" />
+                    <small id="PhoneInline" class="text-muted">
+                        Ingresar el telefono de la persona
+                    </small>
                 </div>
 
-                @*Cedula*@
+                    @*Cedula*@
                 <div class="form-group">
                     <label>Cedula</label>
                     <InputText @bind-Value="personas.Cedula" class="form-control" />
                     <ValidationMessage For="@(() => personas.Cedula)" />
+                    <small id="SocialIdInLineHelper" class="text-muted">
+                        Ingresar la cedula del usuario
+                    </small>
                 </div>
 
-                @*Direccion*@
+                    @*Direccion*@
                 <div class="form-group">
                     <label>Direccion</label>
                     <InputText @bind-Value="personas.Direccion" class="form-control" />
                     <ValidationMessage For="@(() => personas.Direccion)" />
+                    <small id="NameInLineHelper" class="text-muted">
+                        Ingresar la direccion de la persona
+                    </small>
                 </div>
 
-                @*Fecha Nacimiento*@
+                  @*Fecha Nacimiento*@
                 <div class="form-group">
                     <label>Fecha Nacimiento</label>
                     <InputDate @bind-Value="personas.FechaNacimiento" class="form-control" />
                     <ValidationMessage For="@(() => personas.FechaNacimiento)" />
+                    <small id="BirthDateInLineHelper" class="text-muted">
+                        Ingresar la fecha de nacimiento de la persona
+                    </small>
                 </div>
             </form>
         </div>
 
+        @*Buttons*@
         <div class="card-footer">
             <div class="form-group text-center" display: inline-block>
-                <button type="button" class="btn btn-lg btn-primary" @onclick="Nuevo">Nuevo</button>
-                <button type="submit" class="btn btn-lg btn-success">Guardar</button>
-                <button type="button" class="btn btn-lg btn-danger" @onclick="Eliminar">Eliminar</button>
+
+                <button type="button" class="btn btn-lg btn-primary" @onclick="Nuevo">
+                    <span class="oi oi-plus"></span> Nuevo
+                </button>
+                
+                <button type="submit" class="btn btn-lg btn-success">
+                    <span class="oi oi-clipboard" aria-hidden="true"></span> Guardar
+                </button>
+
+                <button type="button" class="btn btn-lg btn-danger" @onclick="Eliminar"><i class="fa fa-trash"></i> 
+                 <span class="oi oi-trash"></span>   Eliminar
+                </button>
+
             </div>
         </div>
     </div>
